# mystical_research

./: .env.example  .gitignore  Cargo.toml  GEMINI.md  README.md  advice.md  build_alma_linux.sh  copy_exe.sh
.zed/: settings.json
src/: main.rs
src/config/: connection.rs
src/controllers/: about_controller.rs  ai_controller.rs  blog_api_controller.rs  blog_controller.rs  contact_api_controller.rs  contact_controller.rs  dynamic_controllers.rs  index_controller.rs  mailing_controller.rs  mod.rs  resources_controller.rs  static_controllers.rs  topics_controller.rs
src/db/: blog_db.rs  config_db.rs  contact_db.rs  mailing_db.rs  mod.rs  schema_db.rs
src/mock/: mod.rs  stux.rs
src/models/: about_model.rs  ai.rs  ai_model.rs  blog_model.rs  contact_model.rs  contact_models.rs  general_model.rs  index.rs  index_model.rs  mailing_model.rs  main.rs  mock.rs  mod.rs  topics_model.rs
src/static/: about.hbs  about_md.hbs  blog_article.hbs  blog_article_md.hbs  blog_home.hbs  blog_home_md.hbs  body.hbs  contact.hbs  container.hbs  footer.hbs  header.hbs  index_body.hbs  main_md.hbs  nav.hbs  newsletter_section.hbs  resources_md.hbs  topics.hbs  topics_md.hbs
src/utils/: ai_utils.rs  crud_utils.rs  env_utils.rs  fs_utils.rs  general_utils.rs  linked_data.rs  mod.rs  response_utils.rs  schema_markup.rs
static/: about.html  blog.html  blog1.html  blog_home.html  chat.html  contact.html  index.html  main.html  resources.html  search1.html  searchtest.html  sefirot.md  topics.html
static/articles/: angels_cats.md  dialogue.md  dreams.md  dreams_formatted.md  ground_article.md  lunar_magic.md  sefirot.md  zodiac_hermeneutics.md
static/css/: chat.css  styles.css  styles_bak.css  styles_cold.css  styles_warmth.css
static/db/: angels_cats.surql  schema.surql
static/templates/: ads.txt  robots.txt  sitemap.xml
static/templates/about/: about.hbs  about_index_html.hbs  about_index_ld.hbs
static/templates/blog/: _blog_post_grid.hbs  blog_article.hbs  blog_article_ld.hbs  blog_article_md.hbs  blog_article_og.hbs  blog_article_slug.hbs  blog_home.hbs  blog_home_html.hbs  blog_home_ld.hbs  (+3 more)
(+18 files in other folders)
