[package]
name = "angels"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-web = "4.5.1"
argon2 = "0.5.3"
async-trait = "0.1.78"
chrono = { version = "0.4.37", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.11.3"
handlebars = { version = "5.1.2", features = ["dir_source"] }
http = "1.1.0"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
surrealdb = "2.2.1"
tokio-cron-scheduler = "0.13.0"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "^0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = "1.7.0"
validator = { version = "0.17.0", features = ["derive"] }
