[package]
name = "angels"
version = "0.2.2"
edition = "2024"

[dependencies]
actix-cors = "0.7.0"
actix-csrf = "0.6.0"
actix-files = "0.6.5"
actix-governor = "0.10.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-web = "4.5.1"
async-trait = "0.1.78"
base64 = { version = "0.13.1", features = ["std"] }
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
handlebars = { version = "5.1.2", features = ["dir_source"] }
log = "0.4.21"
rand = { version = "0.8.5", features = ["getrandom"] }
regex = "1.10.4"
# reqwest = { version = "0.12.12", features = ["json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-manual-roots-no-provider", "json"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
# surrealdb = "2.2.1"
surrealdb = "3.0.5"
tokio = "1.44.2"
tracing = { version = "0.1", features = ["log"] }
unicode-normalization = "0.1.24"
validator = { version = "0.17.0", features = ["derive"] }
